# api/src/controller/user.controller.ts
@@ -1,6 +1,5 @@
 import {Tags, Get, Route, Post, Body} from "tsoa";
 //import {omit} from "lodash";
-import {prisma} from "../app"
 import UserService from "../service/user.service";
 import { User } from '@prisma/client';
 
@@ -14,9 +13,14 @@ export default class UserController{
     }
 
     @Post("/")
-    public async createUser(@Body() body: User): Promise<User> {
+    public async createUser(@Body() body: User): Promise<User|any> {
         const service = new UserService();
         return service.createUser(body);
+    }
+
+    public async getUserByEmail(email: string): Promise<User> {
+        const service = new UserService();
+        return service.findUserbyEmail(email);
     }
 }
 
